# docformat

./: .gitignore  README.md
.compare/: 20260718_test.docx
.github/workflows/: ci.yml  release-deps.yml  release.yml
docformat-pro/: DocFormat Pro.vbs  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  启动.bat
docformat-pro/src/: App.tsx  index.css
docformat-pro/src-tauri/: Cargo.toml  tauri.conf.json
docformat-pro/src-tauri/src/: lib.rs  main.rs
docformat-pro/src/lib/: store.ts  utils.ts
docformat-pro/src/pages/: HomePage.tsx  LogPage.tsx  PresetsPage.tsx  (+1 more)
docformat-qt/: LICENSE  LICENSE.docformat-gui  README.md  gui_test.py  layout_check.py  main.py  requirements.txt  smoke_test.py  启动.bat
docformat-qt/_smoke2/: o.docx  s.docx
docformat-qt/app/: compliance_dialog.py  compliance_report_dialog.py  converter_linux.py  diagnostic.py  file_logger.py  help_dialog.py  main_window.py  onboarding_dialog.py  presets.py  preview_dialog.py  redact.py  report_dialog.py  template_common.py  theme.py  update_check.py  worker.py
docformat-qt/packaging/: build_linux.sh  build_windows.bat  bundle_runtime_libs.sh  diagnose.sh  docformat.desktop  install_kylin.sh
docformat-qt/scripts/: analyzer.py  auto_num.py  compliance.py  converter.py  data_model.py  detector.py  east_asian_typography.py  engine.py  font.py  formatter.py  gb_extras.py  header_footer.py  image.py  page.py  paragraph.py  punctuation.py  signature.py  table.py  title_shape.py  toc.py  watermark.py
docformat-qt/templates/: 技术调查措施请示.md  提请批准逮捕书.md  立案调查请示.md  通用请示模板.md
(+32 files in other folders)
