[package]
name = "docformat-pro"
version = "1.0.0"
edition = "2021"

[lib]
name = "docformat_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "docformat-pro"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
